<resources>
    <string name="app_name">Monkey</string>
    <string name="title_app">Monkey For Android</string>

    <!-- error -->
    <string name="error_message_network">Network error</string>
    <string name="error_repositories">Error while loading repositories</string>
    <string name="error_users">Error while loading users</string>
    <string name="error_not_login">Please login!</string>

    <!-- msg -->
    <string name="msg_win">win</string>

    <string name="msg_retry">Click to reload</string>
    <string name="msg_loading_end">Already ended</string>
    <string name="msg_loading">Loading...</string>
    <!-- title -->
    <string name="title_username">username</string>
    <string name="title_email">email</string>
    <string name="title_home">Home</string>
    <string name="title_user">Famous user</string>
    <string name="title_repo">Hot repo</string>
    <string name="title_daily">Today</string>
    <string name="title_weekly">This Week</string>
    <string name="title_monthly">This Month</string>

    <string name="title_star">star: %1$d</string>
    <string name="title_fork">fork: %1$d</string>

    <string name="title_following">Following(%1$d)</string>
    <string name="title_followers">Followers(%1$d)</string>
    <!-- action -->
    <string name="action_enter">Enter</string>
    <string name="action_settings">Settings</string>

    <!-- dialogs -->

    <!-- menu -->
    <string name="menu_title_user">@string/title_user</string>
    <string name="menu_title_repo">@string/title_repo</string>
    <string name="menu_title_trending">Trending</string>
    <string name="menu_title_about">About</string>

    <string name="title_about_desc">Monkey android is a GitHub third party client, show the rank of users and repositories,trending. Base on Material Design,use MVP pattern</string>

    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <!--<string name="banner_ad_unit_id">ca-app-pub-4106776683609657/2279239023</string>-->
</resources>
