<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_users"
            android:icon="@drawable/ic_users"
            android:title="@string/menu_title_user"/>
        <item
            android:id="@+id/menu_repo"
            android:icon="@drawable/ic_repo"
            android:title="@string/menu_title_repo"/>
        <item
            android:id="@+id/menu_trending"
            android:icon="@drawable/ic_trending"
            android:title="@string/menu_title_trending"/>
    </group>

    <item
        android:id="@+id/menu_setting"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_title_about"/>
        </menu>
    </item>
</menu>